Task 1: Configure Properties (Completed)

--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -4,7 +4,23 @@ server.port=8082
 # Data Source Setup
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
 #       and provide the credentials below to access it
+# CREATE SCHEMA `critter` ;
+# CREATE USER 'sa'@'localhost' IDENTIFIED BY 'sa1234';
+# GRANT ALL ON plant.* TO 'sa'@'localhost';
+
+# Spring datasource url connection
+spring.datasource.url=jdbc:mysql://localhost:3307/critter?serverTimezone=UTC
+
+# Spring datasource username and password
+spring.datasource.username=sa
+spring.datasource.password=sa1234
+
+# Initialization for both embedded and external databases
+spring.datasource.initialization-mode=always
+
+# Tell Hibernate to create new table and drop previous one
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # uncomment the below lines to view sql output in console
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
