Task 8: Review and Refactor Fixed some code snippets in application.properties

--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.datasource.password=sa1234
 # Initialization for both embedded and external databases
 spring.datasource.initialization-mode=always
 
-# Tell Hibernate to create new table and drop previous one
-spring.jpa.hibernate.ddl-auto=create-drop
+# Tell Hibernate to update existing table
+spring.jpa.hibernate.ddl-auto=update
 
 # uncomment the below lines to view sql output in console
 spring.jpa.show-sql=true
