--- a/starter/critter/src/test/resources/application.properties
+++ b/starter/critter/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 1002
 spring.h2.console.enabled=true
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.url=jdbc:h2:mem:db;INIT=CREATE SCHEMA CRITTER
 spring.datasource.username=sa
 spring.datasource.password=sa
 
